# maak

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Aap/: CMakeLists.txt
Aap/src/: AapMain.cpp
Calculator/: CMakeLists.txt
Calculator/include/: CalculatorFactory.h  ICalculator.h
Calculator/src/: CalculatorComplex.cpp  CalculatorComplex.h  CalculatorDivision.cpp  CalculatorDivision.h  CalculatorFactory.cpp  CalculatorProduct.cpp  CalculatorProduct.h  CalculatorSum.cpp  CalculatorSum.h
Calculator/test/: CalculatorComplexTest.cpp  CalculatorDivisionTest.cpp  CalculatorProductTest.cpp  CalculatorSumTest.cpp
Cow/: CMakeLists.txt
Cow/include/: Cow.h  ICow.h
Cow/src/: Cow.cpp
Cow/test/: CowTest.cpp
Dog/: CMakeLists.txt
Dog/include/: IDog.h
Dog/src/: Dog.cpp  Dog.h
Dog/test/: DogTest.cpp
Wolf/: CMakeLists.txt
Wolf/include/Wolf/: IWolf.h
Wolf/src/Wolf/: Wolf.cpp  Wolf.h
Wolf/test/Wolf/: WolfTest.cpp
Zee/: CMakeLists.txt
Zee/include/: IZee.h
Zee/src/: Zee.cpp  Zee.h
Zee/test/: ZeeTest.cpp
